--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: 'Jersey 25';
+    src: url('/@fontsource/jersey-25/files/jersey-25-latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Nanum Gothic Coding';
+    src: url('/@fontsource/nanum-gothic-coding/files/nanum-gothic-coding-latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Nanum Gothic Coding';
+    src: url('/@fontsource/nanum-gothic-coding/files/nanum-gothic-coding-latin-700-normal.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
